@@ -18,6 +18,7 @@ following names for their contribution to the product.
 * Daniel Kinzler
 * Danny B.
 * David McCabe
+* Derk-Jan Hartman
 * Domas Mituzas
 * Fran Rogers
 * Greg Sabino Mullane
