@@ -233,6 +233,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 7492) Rights can now be assigned to specific IP addresses and ranges by
   using $wgAutopromote (new defines: APCOND_ISIP and APCOND_IPINRANGE)
 * Add a 'change block' link to Special:IPBlockList and Special:Log
+* (bug 16459) Use native getElementsByClassName where possible, for better
+  performance in modern browsers
 
 === Bug fixes in 1.14 ===
 
